# FantasyWar

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  FantasyWar.sln  README.md  build.sh
FantasyWar/: FantasyWar.vcxproj  FantasyWar.vcxproj.filters
FantasyWar/src/: Console.cpp  Console.h  Encryptor.cpp  Main.cpp
FantasyWar/src/FilesIO/: Languages.cpp  Languages.h
FantasyWar/src/Interface/: GameMenu.h
FantasyWar/src/Interface/ExtraMenus/: LoginMenu.cpp  LoginMenu.h
FantasyWar/src/Interface/GameMenus/: ShopMenu.cpp  ShopMenu.h  UpgradeMenu.cpp  UpgradeMenu.h
src/: Action.cpp  Action.h  Command.cpp  Command.h  Console.cpp  Console.h  Encryptor.cpp  Encryptor.h  IOutputable.cpp  IOutputable.h  Main.cpp  precompiled.h
src/Base/: App.cpp  App.h  Game.cpp  Game.h
src/Common/: Globals.cpp  Globals.h  Includes.h
src/Extensions/: Aliases.h  StringExtensions.cpp  StringExtensions.h
src/FilesIO/: File.cpp  File.h  Languages.cpp  Languages.h  Translations.cpp  Translations.h
src/Filesystem/: Filesystem.cpp  Filesystem.h  Path.cpp  Path.h
src/Game/: Entity.cpp  Entity.h  Mob.cpp  Mob.h  Player.cpp  Player.h
src/Interface/: Dialog.cpp  Dialog.h  GameMenu.cpp  GameMenu.h  MenuAction.cpp  MenuAction.h
src/Interface/ExtraMenu/: LoginMenu.cpp  LoginMenu.h
src/Interface/GameMenu/: MobArena.cpp  MobArena.h  ShopMenu.cpp  ShopMenu.h  UpgradeMenu.cpp  UpgradeMenu.h
src/MenuItems/: InputMenuItem.cpp  InputMenuItem.h  InputMenuOptionItem.cpp  InputMenuOptionItem.h  MenuItem.cpp  MenuItem.h  OptionMenuItem.cpp  OptionMenuItem.h  OptionsListMenuItem.cpp  OptionsListMenuItem.h  TextMenuItem.cpp  TextMenuItem.h  TitleMenuItem.cpp  TitleMenuItem.h
src/Menus/: MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h
src/UserInterface/: Formatter.cpp  Formatter.h  LinuxTerminal.cpp  LinuxTerminal.h  Terminal.cpp  Terminal.h  UserInterface.cpp  UserInterface.h
src/UserInterface/CLI/: LinuxTerminal.cpp  LinuxTerminal.h  WindowsConsole.cpp  WindowsConsole.h
src/UserInterface/Linux/: LinuxTerminalUI.cpp  LinuxTerminalUI.h
src/UserInterface/MenuItems/: DynamicTextMenuItem.cpp  DynamicTextMenuItem.h  InputMenuItem.cpp  InputMenuItem.h  MenuItem.cpp  MenuItem.h  PauseMenuItem.cpp  PauseMenuItem.h  TextMenuItem.cpp  TextMenuItem.h  TitleMenuItem.cpp  TitleMenuItem.h
src/UserInterface/Menus/: LoginMenu.cpp  LoginMenu.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  PlayerMenu.cpp  PlayerMenu.h  YesNoPrompt.cpp  YesNoPrompt.h
src/UserInterface/Telegram/: TelegramBot.cpp  TelegramBot.h  TelegramUI.cpp  TelegramUI.h
src/UserInterface/TextFormatting/: FormattingTag.cpp  FormattingTag.h  TextFormatter.cpp  TextFormatter.h
src/UserInterface/TextFormatting/Formatters/: CliTextFormatter.cpp  CliTextFormatter.h  (+2 more)
src/UserInterface/Windows/: WindowsCmdUI.cpp  WindowsCmdUI.h
src/Utils/: Strings.h
(+4 files in other folders)
